--- a/gateway/public/index.html
+++ b/gateway/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Near Script - Gateway</title>
+  <link rel="icon" type="image/x-icon" href="/near-script-logo.png">
   <script id="env-config" type="application/json">
     %ENV_CONFIG%
   </script>
